# claude-agent-platform

./: .gitignore  CLAUDE.md  README.md  generate_pptx.py  presentation.html  presentation.pptx  task.md
.claude/: commands
.github/workflows/: deploy.yml  lint.yml  test.yml
browser-agent/: .env.example  Dockerfile  README.md  pyproject.toml  zeabur.yaml
browser-agent/app/: agent.py  browser.py  claude_client.py  logger.py  main.py  schemas.py
browser-agent/tests/: test_agent.py  test_browser.py  test_claude_client.py  test_integration.py  test_logger.py  test_main.py  test_schemas.py
github-skills/: README.md  pyproject.toml
github-skills/skills/: gh-deploy.md  gh-lint.md  gh-status.md
github-skills/tests/: test_validator.py
github-skills/tests/fixtures/: invalid_skill.md  valid_skill.md
litellm-proxy/: .env.example  Dockerfile  README.md  config.yaml  custom_handler.py  pyproject.toml  zeabur.yaml
litellm-proxy/tests/: test_acompletion.py  test_astreaming.py  test_proxy.py  test_tool_use.py
task1/: .dockerignore  Dockerfile  README.md  config.yaml  custom_handler.py  pyproject.toml
task1/claude_cli_litellm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
task1/tests/: test_acompletion.py  test_assemble_prompt.py  test_astreaming.py  test_build_cmd.py  test_proxy.py
task2/: README.md  check_skills.py  pyproject.toml  validator.py
task2/skills/: gh-test.md
task2/tests/: test_validator.py
